--- a/src/tools/FirmwareUpdater/calibrationwindow.ui
+++ b/src/tools/FirmwareUpdater/calibrationwindow.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1160</width>
-    <height>762</height>
+    <width>1743</width>
+    <height>1172</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1200</width>
-    <height>762</height>
+    <width>1743</width>
+    <height>1172</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -72,19 +72,19 @@
            <attribute name="horizontalHeaderCascadingSectionResizes">
             <bool>false</bool>
            </attribute>
-           <attribute name="horizontalHeaderDefaultSectionSize">
+           <attribute name="horizontalHeaderMinimumSectionSize">
             <number>80</number>
            </attribute>
-           <attribute name="horizontalHeaderMinimumSectionSize">
+           <attribute name="horizontalHeaderDefaultSectionSize">
             <number>80</number>
            </attribute>
            <attribute name="horizontalHeaderStretchLastSection">
             <bool>true</bool>
            </attribute>
-           <attribute name="verticalHeaderDefaultSectionSize">
+           <attribute name="verticalHeaderMinimumSectionSize">
             <number>35</number>
            </attribute>
-           <attribute name="verticalHeaderMinimumSectionSize">
+           <attribute name="verticalHeaderDefaultSectionSize">
             <number>35</number>
            </attribute>
            <row>
@@ -523,15 +523,15 @@
                  <enum>QAbstractItemView::NoSelection</enum>
                 </property>
                 <attribute name="horizontalHeaderDefaultSectionSize">
-                 <number>80</number>
+                 <number>103</number>
                 </attribute>
                 <attribute name="horizontalHeaderStretchLastSection">
                  <bool>true</bool>
                 </attribute>
-                <attribute name="verticalHeaderDefaultSectionSize">
+                <attribute name="verticalHeaderMinimumSectionSize">
                  <number>35</number>
                 </attribute>
-                <attribute name="verticalHeaderMinimumSectionSize">
+                <attribute name="verticalHeaderDefaultSectionSize">
                  <number>35</number>
                 </attribute>
                 <row>
@@ -726,6 +726,8 @@
                    <property name="font">
                     <font>
                      <pointsize>10</pointsize>
+                     <weight>50</weight>
+                     <bold>false</bold>
                     </font>
                    </property>
                    <property name="focusPolicy">
@@ -740,19 +742,19 @@
                    <attribute name="horizontalHeaderVisible">
                     <bool>false</bool>
                    </attribute>
-                   <attribute name="horizontalHeaderDefaultSectionSize">
-                    <number>80</number>
-                   </attribute>
                    <attribute name="horizontalHeaderMinimumSectionSize">
                     <number>70</number>
+                   </attribute>
+                   <attribute name="horizontalHeaderDefaultSectionSize">
+                    <number>80</number>
                    </attribute>
                    <attribute name="verticalHeaderVisible">
                     <bool>false</bool>
                    </attribute>
-                   <attribute name="verticalHeaderDefaultSectionSize">
+                   <attribute name="verticalHeaderMinimumSectionSize">
                     <number>35</number>
                    </attribute>
-                   <attribute name="verticalHeaderMinimumSectionSize">
+                   <attribute name="verticalHeaderDefaultSectionSize">
                     <number>35</number>
                    </attribute>
                    <row>
@@ -1179,6 +1181,8 @@
                    <property name="font">
                     <font>
                      <pointsize>10</pointsize>
+                     <weight>50</weight>
+                     <bold>false</bold>
                     </font>
                    </property>
                    <property name="focusPolicy">
@@ -1194,7 +1198,7 @@
                     <bool>false</bool>
                    </attribute>
                    <attribute name="horizontalHeaderDefaultSectionSize">
-                    <number>80</number>
+                    <number>103</number>
                    </attribute>
                    <attribute name="horizontalHeaderStretchLastSection">
                     <bool>true</bool>
@@ -1202,10 +1206,10 @@
                    <attribute name="verticalHeaderVisible">
                     <bool>false</bool>
                    </attribute>
-                   <attribute name="verticalHeaderDefaultSectionSize">
+                   <attribute name="verticalHeaderMinimumSectionSize">
                     <number>35</number>
                    </attribute>
-                   <attribute name="verticalHeaderMinimumSectionSize">
+                   <attribute name="verticalHeaderDefaultSectionSize">
                     <number>35</number>
                    </attribute>
                    <row>
@@ -1289,6 +1293,8 @@
                    <property name="font">
                     <font>
                      <pointsize>10</pointsize>
+                     <weight>50</weight>
+                     <bold>false</bold>
                     </font>
                    </property>
                    <property name="toolTip">
@@ -1304,6 +1310,8 @@
                    <property name="font">
                     <font>
                      <pointsize>10</pointsize>
+                     <weight>50</weight>
+                     <bold>false</bold>
                     </font>
                    </property>
                    <property name="toolTip">
@@ -1648,6 +1656,8 @@
              <property name="font">
               <font>
                <pointsize>10</pointsize>
+               <weight>75</weight>
+               <bold>true</bold>
               </font>
              </property>
              <property name="orientation">
@@ -1714,6 +1724,7 @@
              <pointsize>10</pointsize>
              <weight>50</weight>
              <bold>false</bold>
+             <underline>false</underline>
             </font>
            </property>
            <property name="toolTip">
@@ -1724,7 +1735,7 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item row="2" column="0">
           <widget class="QGroupBox" name="groupBox2">
            <property name="minimumSize">
             <size>
@@ -1734,7 +1745,7 @@
            </property>
            <property name="maximumSize">
             <size>
-             <width>160</width>
+             <width>300</width>
              <height>16777215</height>
             </size>
            </property>
@@ -1743,6 +1754,7 @@
              <pointsize>10</pointsize>
              <weight>50</weight>
              <bold>false</bold>
+             <underline>false</underline>
             </font>
            </property>
            <property name="toolTip">
@@ -1769,6 +1781,9 @@
               <property name="font">
                <font>
                 <pointsize>10</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+                <underline>false</underline>
                </font>
               </property>
               <property name="focusPolicy">
@@ -1781,15 +1796,15 @@
                <enum>QAbstractItemView::NoSelection</enum>
               </property>
               <attribute name="horizontalHeaderDefaultSectionSize">
-               <number>80</number>
+               <number>103</number>
               </attribute>
               <attribute name="horizontalHeaderStretchLastSection">
                <bool>true</bool>
               </attribute>
-              <attribute name="verticalHeaderDefaultSectionSize">
+              <attribute name="verticalHeaderMinimumSectionSize">
                <number>35</number>
               </attribute>
-              <attribute name="verticalHeaderMinimumSectionSize">
+              <attribute name="verticalHeaderDefaultSectionSize">
                <number>35</number>
               </attribute>
               <row>
@@ -1909,13 +1924,14 @@
            </layout>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item row="2" column="1">
           <widget class="QGroupBox" name="groupBox_4">
            <property name="font">
             <font>
              <pointsize>10</pointsize>
              <weight>50</weight>
              <bold>false</bold>
+             <underline>false</underline>
             </font>
            </property>
            <property name="toolTip">
@@ -1942,6 +1958,9 @@
               <property name="font">
                <font>
                 <pointsize>10</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+                <underline>false</underline>
                </font>
               </property>
               <property name="focusPolicy">
@@ -1954,15 +1973,15 @@
                <enum>QAbstractItemView::NoSelection</enum>
               </property>
               <attribute name="horizontalHeaderDefaultSectionSize">
-               <number>80</number>
+               <number>103</number>
               </attribute>
               <attribute name="horizontalHeaderStretchLastSection">
                <bool>true</bool>
               </attribute>
-              <attribute name="verticalHeaderDefaultSectionSize">
+              <attribute name="verticalHeaderMinimumSectionSize">
                <number>35</number>
               </attribute>
-              <attribute name="verticalHeaderMinimumSectionSize">
+              <attribute name="verticalHeaderDefaultSectionSize">
                <number>35</number>
               </attribute>
               <row>
@@ -2250,8 +2269,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1160</width>
-     <height>21</height>
+     <width>1743</width>
+     <height>37</height>
     </rect>
    </property>
    <property name="font">
